Should have saved index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 												The galaxy M105 in the Leo I group has been at the centre of a long-standing debate on the dark matter (DM) content of early-type galaxies and is one of the poster children of the Planetary Nebula Spectrograph (PN.S) early-type galaxy survey. We have recently obtained more extended photometric and kinematic data to place better constraints on the assembly history of M105 and its group environment. The figure on the left shows the PNe detected in M105 and its companion spiral galaxy NGC 3384 colour-coded by their velocity.
 											</p>
 											<p>
-												We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results were presented in Chapter 4 of my PhD thesis.
+												We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results were also presented in Chapter 4 of my PhD thesis.
 											</p>
 											<h5> I: Wide-field photometric survey of planetary nebulae in the Leo I group</h5>
 											<p><span class="image left"><img src="images/M105_final_fit.png" alt="From Hartke et al. (2020)" /></span>
@@ -103,8 +103,10 @@
 												<li><a href="http://www.ing.iac.es/PR/press/pnesub.html" class="button alt fit small">ING web release</a></li>
 											</ul>
 											<h5> II: Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M105 </h5>
-											<p><span class="image top"><img src="images/lambda_profiles.jpg" width="75%" height="scale" alt="From Hartke et al. (2022)" /></span>
-											In the second paper of the series, we followed-up the PN candidates with the Planetary Nebula Spectrograph (PN.S). </p>
+											<p><span class="image left"><img src="images/lambda_profiles.jpg" alt="From Hartke et al. (2022)" /></span>
+											In the second paper of the series, we followed-up the PN candidates with the Planetary Nebula Spectrograph (PN.S). We separated the PNe into populations associated with the bulge and disk of the companion galaxy NGC 3384, and with the Sersic halo and exponential envelope of our main target M105. We identified three kinematically distinct populations of PNe in M105, whose &lambda; profiles are shown on the left.
+
+										  The center of the galaxy is dominated by the rotationg core, characterised by a stellar population with solar metallicity that was likely formed in the situ. The inner halo is composed of intermediate-metallicity and metal-rich stars, and is characterised by low rotation and line-of-sight velocity dispersion PNe with a low PN specific frequency. Lastly, PNe in the surrounding exponential envelope are associated with a metal-poor and old stellar population. The increasing rotation and constantly high velocity dispersion point towards an accretionary origin and that these PNe trace the intra-group light of the Leo I group.</p>
 											<ul class="actions fit">
 												<li><a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801696H" class="button primary fit small">Read the preprint</a></li>
 											</ul>
