Updated publication list

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 											<p><span class="image left"><img src="images/M105_kinematics.png" alt="From Hartke et al. (in prep.)" /></span>
 												The galaxy M105 in the Leo I group has been at the centre of a long-standing debate on the dark matter (DM) content of early-type galaxies and is one of the poster children of the Planetary Nebula Spectrograph (PN.S) early-type galaxy survey. We have recently obtained more extended photometric and kinematic data to place better constraints on the assembly history of M105 and its group environment. The figure on the left shows the PNe detected in M105 and its companion spiral galaxy NGC 3384 colour-coded by their velocity.
 											</p>
-											<p>
-												We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results were also presented in Chapter 4 of my PhD thesis.
+											<p> We have performed a novel photo-kinematic decomposition of of our sample into two subcomponents associated with NGC 3384 and M105 using Gaussian Mixture Models and are currently investigating the presence and dynamics of intra-group light in this loose group of galaxies. These new data will also allow us to better constrain the matter content of M105 at large radii. First results were also presented in Chapter 4 of my PhD thesis.
 											</p>
 											<h5> I: Wide-field photometric survey of planetary nebulae in the Leo I group</h5>
 											<p><span class="image left"><img src="images/M105_final_fit.png" alt="From Hartke et al. (2020)" /></span>
@@ -179,9 +178,9 @@
 											<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-8745-689X" href="https://orcid.org/0000-0002-8745-689X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:middle;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-8745-689X</a></div>
 											</li>
 										</ul>
-										<h4>Under Review</h4>
+										<h4>In Press</h4>
 									<ul class="alt">
-										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220108710H">The halo of M105 and its group environment as traced by planetary nebula populations: II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M105</A></li>
+										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, arXiv e-prints (accepted for publication in Astronomy and Astrophysics), <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220108710H">The halo of M105 and its group environment as traced by planetary nebula populations: II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M105</A></li>
 									</ul>
 										<h4>Refereed publications</h4>
 									<ul class="alt">
