Updated publication list.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 										  <p>The center of the galaxy is dominated by the rotationg core, characterised by a stellar population with solar metallicity that was likely formed in the situ. The inner halo is composed of intermediate-metallicity and metal-rich stars, and is characterised by low rotation and line-of-sight velocity dispersion PNe with a low PN specific frequency. Lastly, PNe in the surrounding exponential envelope are associated with a metal-poor and old stellar population. The increasing rotation and constantly high velocity dispersion point towards an accretionary origin and that these PNe trace the intra-group light of the Leo I group.</p>
 											<ul class="actions fit">
-												<li><a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200801696H" class="button primary fit small">Read the preprint</a></li>
+												<li><a href="https://ui.adsabs.harvard.edu/abs/2022A%26A...663A..12H/abstract" class="button primary fit small">Read the paper</a></li>
 											</ul>
 										</article>
 										<article>
@@ -178,12 +178,14 @@
 											<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-8745-689X" href="https://orcid.org/0000-0002-8745-689X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:middle;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-8745-689X</a></div>
 											</li>
 										</ul>
-										<h4>In Press</h4>
+										<!-- <h4>In Press</h4>
 									<ul class="alt">
-										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, arXiv e-prints (accepted for publication in Astronomy and Astrophysics), <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220108710H">The halo of M105 and its group environment as traced by planetary nebula populations: II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M105</A></li>
-									</ul>
+
+									</ul> -->
 										<h4>Refereed publications</h4>
 									<ul class="alt">
+										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2022A&amp;A...663A..12H">The halo of M 105 and its group environment as traced by planetary nebula populations. II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M 105</A></li>
+
 										<li><P>Gran, F., Zoccali, M., Saviane, I., Valenti, E., Rojas-Arriagada, A., Ramos, R.C., <b>Hartke, J.</b>, Carballo-Bello, J.A., Navarrete, C., Rejkuba, M., and Carvajal, J.O. 2021, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp.2477G">Hidden in the Haystack: Low-luminosity globular clusters towards the Milky Way bulge</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Gerhard, O., McConnachie, A., Caldwell, N., <b>Hartke, J.</b>, and Freeman, K.C. 2021, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2021A&amp;A...647A.130B">The survey of planetary nebulae in Andromeda (M 31). III. Constraints from deep planetary nebula luminosity functions on the origin of the inner halo substructures in M 31</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Pulsoni, C., Freeman, K.C., Merrifield, M., Cortesi, A., and Kuijken, K. 2020, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2020A&amp;A...642A..46H">The halo of M 105 and its group environment as traced by planetary nebula populations. I. Wide-field photometric survey of planetary nebulae in the Leo I group</A></li>
