--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar_new.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Johanna Hartke</a></h1>
 					<p>ESO Fellow at the University of Oxford</p>
 					<p>&bull; Galaxy formation and evolution &bull; Galaxy dynamics &bull; Planetary nebulae &bull; Integral-field spectroscopy &bull; Adaptive optics &bull; </p>
@@ -69,7 +69,7 @@
 										<p>Born and raised in a small town in the north of Germany, I moved to Bremen to pursue a Bachelor of Science in Physics at Jacobs University (2010 - 2013). During my undergraduate, I had the chance to participate in the DAAD RISE worldwide internship programme. During my intership at the School of Astronomy and Astrophysics of the Australian National University my motivation to pursue a career in Astronomy was fostered. </p>
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
 										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. Until late 2021, I was a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>.
-										Since October 2021, I am on secondment to the Sub-department of Astrophysics at the University of Oxford, where I am spending the final year of my ESO fellowship. </p>
+										Since October 2021, I am on secondment to the Sub-department of Astrophysics at the University of Oxford, where I am spending the final year of my ESO fellowship. Currently, I am also a fellow of the GSO Leadership Academy. </p>
 										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. Currently, I am singing in the Wadham College Chapel Choir and the Oxford Bach Choir <a href="https://www.oxfordbachchoir.org"> (OBC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
 									</article>
 									<ul class="actions">
@@ -84,7 +84,7 @@
 							<section id="research">
 								<div class="container">
 									<h3>Research</h3>
-									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. Below is a selection of current and past research projects that I have been involved in. </p>
+									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. I am also a member of the <a href="http://www.na.astro.it/LEWIS/Welcome.html"> LEWIS</a> and <a href="https://sites.google.com/inaf.it/chiara-spiniello/inspire/"> INSPIRE</a> collaborations that target galaxies at the extremes of cosmic structure formation. Below is a selection of current and past research projects that I have been involved in. </p>
 									<div class="features">
 										<article>
 											<h4>The halo of M105 and its group environment as traced by planetary nebulae populations</h4>
@@ -160,7 +160,11 @@
 										</ul>
 
 
-									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions.</p>
+									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions. New performance data have recently been published by MUSE Fellow Thomas Wevers:</p>
+
+									<ul class="actions fit">
+										<li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220907540W/abstract" class="button primary fit small">Read the paper</a></li>
+									</ul>
 								</article>
 
 								</div>
@@ -178,10 +182,13 @@
 											<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-8745-689X" href="https://orcid.org/0000-0002-8745-689X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:middle;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-8745-689X</a></div>
 											</li>
 										</ul>
-										<!-- <h4>In Press</h4>
+									<h4>In Press</h4>
 									<ul class="alt">
+										<li><P>Arnaboldi, M., Bhattacharya, S., Gerhard, O., Kobayashi, C., Freeman, K.C., Caldwell, N., <b>Hartke, J.</b>, McConnachie, A., and Guhathakurta, P. 2022, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220802328A">The survey of planetary nebulae in Andromeda (M 31) V. Chemical enrichment of the thin and thicker discs of Andromeda. Oxygen to argon abundance ratios for planetary nebulae and H II regions</A></li>
 
-									</ul> -->
+										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Kobayashi, C., <b>Hartke, J.</b>, Freeman, K.C., McConnachie, A.W., and Guhathakurta, P. 2022, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220306428B">The survey of planetary nebulae in Andromeda (M31). IV. Radial oxygen and argon abundance gradients of the thin and thicker disc</A></li>
+
+									</ul>
 										<h4>Refereed publications</h4>
 									<ul class="alt">
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2022A&amp;A...663A..12H">The halo of M 105 and its group environment as traced by planetary nebula populations. II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M 105</A></li>
@@ -283,7 +290,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated January 2022. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated September 2022. All rights reserved. </li><li>&copy; Profile picture: Chris Coe. </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 							<ul class='copyright'>
 								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
