--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/johannahartke" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/jhartke" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:jhartke@eso.org" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:johanna.hartke@utu.fi" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -56,7 +56,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Johanna Hartke</h2>
-										<p>Fellow at the <a href:"http://www.eso.org">European Southern Observatory</a> </p>
+										<p>Fellow at the <a href:"https://sites.utu.fi/finca/en/FINCA">Finnish Centre for Astronomy with ESO</a> </p>
 									</header>
 								</div>
 							</section>
@@ -162,7 +162,7 @@
 										</ul>
 
 
-									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions. New performance data have recently been published by MUSE Fellow Thomas Wevers:</p>
+									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions. An updated performance analysis has been published by MUSE Fellow Thomas Wevers:</p>
 
 									<ul class="actions fit">
 										<li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220907540W/abstract" class="button primary fit small">Read the paper</a></li>
