--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
 										<li class="fa-envelope"><a href="mailto:johanna.hartke@utu.fi">johanna.hartke@utu.fi</a></li>
 										<li class="fa-twitter"><a href="https://twitter.com/johannahartke">@JohannaHartke</a></li>
 										<li class="fa-github"><a href="https://github.com/jhartke">jhartke</a></li>
+										<li class="fa-star"><a rel="me" href="https://astrodon.social/@johannahartke">johannahartke@astrodon.social</a>
 									</ul>
 								</div>
 							</section>
