Updated publication list and CV # Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -65,18 +65,27 @@
 							<section id="about">
 								<div class="container">
 									<h3>About Me</h3>
+									<h4> Key stations</h4>
+									<ul class="alt">
+										<li><b>2015 - 2018:</b> PhD at the European Southern Observatory (ESO) / IMPRS Astrophysics / Ludwig-Maximilians-Universität München, Munich, Germany</li>
+										<li><b>2018 - 2021:</b> Postoctoral Fellowship at the European Southern Observatory, Santiago and Paranal Observatory, Chile</li>
+										<li><b>2021 - 2022:</b> Secondment from the ESO fellowship to the University of Oxford, United Kingdom</li>
+										<li><b>2022 - present:</b> Postdoctoral Fellowship at the Finnish Centre for Astronomy with ESO, University of Turku, Finland</li>
+									</ul>
+									<ul class="actions">
+										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
+									</ul>
+
+									<h4> Bio </h4>
 									<article>
 										<p>Born and raised in a small town in the north of Germany, I moved to Bremen to pursue a Bachelor of Science in Physics at Jacobs University (2010 - 2013). During my undergraduate, I had the chance to participate in the DAAD RISE worldwide internship programme. During my intership at the School of Astronomy and Astrophysics of the Australian National University my motivation to pursue a career in Astronomy was fostered. </p>
 										<p>For my Master of Science (2013 - 2015) I moved to the University of Groningen in the Netherlands, at whose Kapteyn Institute I had already completed parts of my Bachelor Research Project. There, I gained first observational experience during two observing runs with the Isaac Newton and William Herschel Telescopes at the Roque de los Muchachos, La Palma.</p>
 										<p><span class="image left"><img src="images/phdhat.jpg" width="50%" height="scale" alt="PhD hat" /></span>From 2015 to 2018 I was a PhD student at the European Southern Observatory as part of the International Max Planck Research School (IMPRS) on Astrophysics at the LMU Munich. I successfully defended my PhD thesis titled <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> "Substructures, accretion events, and diffuse intra-group light surrounding bright early-type galaxies"</a> in September 2018. </p>
-										<p>In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. Until late 2021, I was a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>. From October 2021 to 2022, I was on secondment to the Sub-department of Astrophysics at the University of Oxford, where I am spent the final year of my ESO fellowship.</p>
-										<p>As of 1st of November 2022, I am a postdoctoral fellow at the Finnish Centre for Astronomy with ESO (<a href:"https://sites.utu.fi/finca/en/FINCA"> FINCA</a>).
-										Currently, I am also a fellow of the GSO Leadership Academy. </p>
+										<p>In November 2018 I took up a postdoctoral fellowship at the European Southern Observatory in Santiago de Chile with observational duties at the Very Large Telescope at Paranal Observatory. Until late 2021, I was a support astronomer at UT4, as well as the instrument fellow for the MUSE integral-field spectrograph. You can read more about my time as an ESO fellow and my journey into astronomy in my <a href="http://doi.eso.org/10.18727/0722-6691/5182"> Fellow profile in the ESO Messenger</a>. From October 2021 to 2022, I was on secondment to the Sub-department of Astrophysics at the University of Oxford, where I spent the final year of my ESO fellowship.</p>
+										<p>As of 1st of November 2022, I am a postdoctoral fellow at the Finnish Centre for Astronomy with ESO (<a href:"https://sites.utu.fi/finca/en/FINCA"> FINCA</a>) at the University of Turku.
+										From September 2022 to February 2023 I was a fellow of the GSO Leadership Academy. </p>
 										When I am not working on my research projects, one is likely to find me rehearsing music. While living in Munich, I was a soprano in the Münchner Motettenchor <a href="http://www.muenchner-motettenchor.de"> (MMC)</a>. In Oxford, I sang in the Wadham College Chapel Choir and the Oxford Bach Choir <a href="https://www.oxfordbachchoir.org"> (OBC)</a>. I also enjoy swimming, bouldering, windsurfing, and reading. Since moving to Chile and marvelling at the southern skies, I took up (astro)photography. Have a look at the <a href="#gallery"> gallery</a> on this webpage</p>
 									</article>
-									<ul class="actions">
-										<li><a href="cv_johanna_hartke.pdf" class="button primary icon fa-download">Download my Curriculum Vitae</a></li>
-									</ul>
 
 								</div>
 
@@ -86,7 +95,7 @@
 							<section id="research">
 								<div class="container">
 									<h3>Research</h3>
-									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I started using Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. I am also a member of the <a href="http://www.na.astro.it/LEWIS/Welcome.html"> LEWIS</a> and <a href="https://sites.google.com/inaf.it/chiara-spiniello/inspire/"> INSPIRE</a> collaborations that target galaxies at the extremes of cosmic structure formation. Below is a selection of current and past research projects that I have been involved in. </p>
+									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I used Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. I am also a member of the <a href="http://www.na.astro.it/LEWIS/Welcome.html"> LEWIS</a> and <a href="https://sites.google.com/inaf.it/chiara-spiniello/inspire/"> INSPIRE</a> collaborations that target ultra-diffuse and ultra-massive compact galaxies respectively, thus exploring the extremes of galaxy formation. Below is a selection of current and past research projects that I have been involved in. </p>
 									<div class="features">
 										<article>
 											<h4>The halo of M105 and its group environment as traced by planetary nebulae populations</h4>
@@ -152,7 +161,7 @@
 							<!-- Four -->
 							<section id="instrumentation">
 								<div class="container">
-									<h3>Instrumentation</h3>
+									<h3>Science Operations and Instrumentation</h3>
 									<article>
 									<p><span class="image left"><img style="max-width: 450px" src="images/ut4_lasers.jpg" alt="UT4 with the lasers of the Adaptive Optics Facility." /></span>I have supported more than a hundred nights of observations with the MUSE integral-field spectrograph and have a solid background in planning, executing, and reducing observations with integral-field units (IFUs). As MUSE instrument fellow, I have lead a major study on the performance of the Adaptive Optics (AO) system GALACSI, analysing a massive data set consisting of multi-period wide-field and narrow-field mode observations. Our main findings can be found in the MUSE user manual for planning observations and are also summarised as Proceedings of SPIE:</p>
 
@@ -184,15 +193,16 @@
 											<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-8745-689X" href="https://orcid.org/0000-0002-8745-689X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:middle;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-8745-689X</a></div>
 											</li>
 										</ul>
-									<!-- <h4>In Press</h4>
+									<h4>Under Review</h4>
 									<ul class="alt">
-										<li><P>Arnaboldi, M., Bhattacharya, S., Gerhard, O., Kobayashi, C., Freeman, K.C., Caldwell, N., <b>Hartke, J.</b>, McConnachie, A., and Guhathakurta, P. 2022, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220802328A">The survey of planetary nebulae in Andromeda (M 31) V. Chemical enrichment of the thin and thicker discs of Andromeda. Oxygen to argon abundance ratios for planetary nebulae and H II regions</A></li>
 
-										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Kobayashi, C., <b>Hartke, J.</b>, Freeman, K.C., McConnachie, A.W., and Guhathakurta, P. 2022, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2022arXiv220306428B">The survey of planetary nebulae in Andromeda (M31). IV. Radial oxygen and argon abundance gradients of the thin and thicker disc</A></li>
-
-									</ul> -->
+										<li><P>Simon, D.A., Cappellari, M., and <b>Hartke, J.</b> 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230318229S">Supermassive black hole mass in the massive elliptical galaxy M87 from integral-field stellar dynamics using OASIS and MUSE with adaptive optics: assessing systematic uncertainties</A></li>
+										<li><P>Pulsoni, C., Gerhard, O., Fall, S.M., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230306132P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
+									</ul>
 										<h4>Refereed publications</h4>
 									<ul class="alt">
+										<li><P>Martín-Navarro, I., Spiniello, C., Tortora, C., Coccato, L., D&#x27;Ago, G., Ferré-Mateu, A., Pulsoni, C., <b>Hartke, J.</b>, Arnaboldi, M., Hunt, L., Napolitano, N.R., Scognamiglio, D., and Spavone, M. 2023, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.521.1408M">INSPIRE: INvestigating Stellar Population In RElics - IV. The initial mass function slope in relics</A></li>
+										<li><P>D&#x27;Ago, G., Spiniello, C., Coccato, L., Tortora, C., La Barbera, F., Arnaboldi, M., Bevacqua, D., Ferré-Mateu, A., Gallazzi, A., <b>Hartke, J.</b>, Hunt, L.K., Martín-Navarro, I., Napolitano, N.R., Pulsoni, C., Radovich, M., Saracco, P., Scognamiglio, D., and Zibetti, S. 2023, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2023A&amp;A...672A..17D">INSPIRE: INvestigating Stellar Population In RElics. III. Second data release (DR2): testing the systematics on the stellar velocity dispersion</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Kobayashi, C., <b>Hartke, J.</b>, Freeman, K.C., McConnachie, A.W., and Guhathakurta, P. 2022, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.517.2343B">The survey of planetary nebulae in Andromeda (M31) - IV. Radial oxygen and argon abundance gradients of the thin and thicker disc</A></li>
 										<li><P>Arnaboldi, M., Bhattacharya, S., Gerhard, O., Kobayashi, C., Freeman, K.C., Caldwell, N., <b>Hartke, J.</b>, McConnachie, A., and Guhathakurta, P. 2022, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2022A&amp;A...666A.109A">The survey of planetary nebulae in Andromeda (M31). V. Chemical enrichment of the thin and thicker discs of Andromeda: Oxygen to argon abundance ratios for planetary nebulae and HII regions</A></li>
 										<li><P><b>Hartke, J.</b>, Arnaboldi, M., Gerhard, O., Coccato, L., Merrifield, M., Kuijken, K., Pulsoni, C., Agnello, A., Bhattacharya, S., Spiniello, C., Cortesi, A., Freeman, K.C., Napolitano, N.R., and Romanowsky, A.J. 2022, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2022A&amp;A...663A..12H">The halo of M 105 and its group environment as traced by planetary nebula populations. II. Using kinematics of single stars to unveil the presence of intragroup light around the Leo I galaxies NGC 3384 and M 105</A></li>
