--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
 									<ul class="alt">
 
 										<li><P>Simon, D.A., Cappellari, M., and <b>Hartke, J.</b> 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230318229S">Supermassive black hole mass in the massive elliptical galaxy M87 from integral-field stellar dynamics using OASIS and MUSE with adaptive optics: assessing systematic uncertainties</A></li>
+							
+									</ul>
+									<h4>In press</h4>
+									<ul class="alt">
 										<li><P>Pulsoni, C., Gerhard, O., Fall, S.M., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230306132P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
 									</ul>
 										<h4>Refereed publications</h4>
