--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<section id="research">
 								<div class="container">
 									<h3>Research</h3>
-									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I used Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. I am also a member of the <a href="http://www.na.astro.it/LEWIS/Welcome.html"> LEWIS</a> and <a href="https://sites.google.com/inaf.it/chiara-spiniello/inspire/"> INSPIRE</a> collaborations that target ultra-diffuse and ultra-massive compact galaxies respectively, thus exploring the extremes of galaxy formation. Below is a selection of current and past research projects that I have been involved in. </p>
+									<p>I am interested in the formation, evolution, and dynamics of galaxies ranging from our own Milky Way to the most massive galaxies found at the centres of galaxy clusters. In my <a href="https://edoc.ub.uni-muenchen.de/23027/1/Hartke_Johanna.pdf"> PhD research</a> I used Planetary Nebulae (PNe) as kinematic tracers for the build-up of the extended halos of massive early-type galaxies and the interplay with the intra-cluster light. I am also a member of the <a href="http://www.na.astro.it/LEWIS/Welcome.html"> LEWIS</a> and <a href="https://sites.google.com/inaf.it/chiara-spiniello/inspire/"> INSPIRE</a> collaborations that target ultra-diffuse and ultra-massive compact galaxies respectively, thus exploring the extremes of galaxy formation. Below is a selection of current and past research projects that I have lead or been majorly involved in. </p>
 									<div class="features">
 										<article>
 											<h4>The halo of M105 and its group environment as traced by planetary nebulae populations</h4>
@@ -171,7 +171,7 @@
 										</ul>
 
 
-									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions. An updated performance analysis has been published by MUSE Fellow Thomas Wevers:</p>
+									<p>I have actively participated in commissioning the upgraded InfraRed Low-Order wavefront Sensor (IRLOS+) that now allows scientists to conduct observations in narrow-field mode (NFM) with much fainter AO guide stars. My main contributions were twofold: (i) the selection of adequate targets and AO guide stars in preparation for and during the commissioning and (ii) the reduction and post-processing of large amounts of IFU data on the fly, with the goal of establishing correlations between AO performance and observing conditions. An updated performance analysis has been published by MUSE Fellow Thomas Wevers:</p>
 
 									<ul class="actions fit">
 										<li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220907540W/abstract" class="button primary fit small">Read the paper</a></li>
@@ -198,13 +198,14 @@
 
 										<li><P>Simon, D.A., Cappellari, M., and <b>Hartke, J.</b> 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230318229S">Supermassive black hole mass in the massive elliptical galaxy M87 from integral-field stellar dynamics using OASIS and MUSE with adaptive optics: assessing systematic uncertainties</A></li>
 							
-									</ul>
+									<!-- </ul>
 									<h4>In press</h4>
 									<ul class="alt">
 										<li><P>Pulsoni, C., Gerhard, O., Fall, S.M., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230306132P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
-									</ul>
+									</ul> -->
 										<h4>Refereed publications</h4>
 									<ul class="alt">
+										<li><P>Pulsoni, C., Gerhard, O., Michael Fall, S., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2023A&amp;A...674A..96P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
 										<li><P>Martín-Navarro, I., Spiniello, C., Tortora, C., Coccato, L., D&#x27;Ago, G., Ferré-Mateu, A., Pulsoni, C., <b>Hartke, J.</b>, Arnaboldi, M., Hunt, L., Napolitano, N.R., Scognamiglio, D., and Spavone, M. 2023, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.521.1408M">INSPIRE: INvestigating Stellar Population In RElics - IV. The initial mass function slope in relics</A></li>
 										<li><P>D&#x27;Ago, G., Spiniello, C., Coccato, L., Tortora, C., La Barbera, F., Arnaboldi, M., Bevacqua, D., Ferré-Mateu, A., Gallazzi, A., <b>Hartke, J.</b>, Hunt, L.K., Martín-Navarro, I., Napolitano, N.R., Pulsoni, C., Radovich, M., Saracco, P., Scognamiglio, D., and Zibetti, S. 2023, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2023A&amp;A...672A..17D">INSPIRE: INvestigating Stellar Population In RElics. III. Second data release (DR2): testing the systematics on the stellar velocity dispersion</A></li>
 										<li><P>Bhattacharya, S., Arnaboldi, M., Caldwell, N., Gerhard, O., Kobayashi, C., <b>Hartke, J.</b>, Freeman, K.C., McConnachie, A.W., and Guhathakurta, P. 2022, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.517.2343B">The survey of planetary nebulae in Andromeda (M31) - IV. Radial oxygen and argon abundance gradients of the thin and thicker disc</A></li>
@@ -306,7 +307,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated November 2022. All rights reserved. </li><li>&copy; Profile picture: Chris Coe. </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated August 2023. All rights reserved. </li><li>&copy; Profile picture: Chris Coe. </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 							<ul class='copyright'>
 								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
